--- a/overrides/config/savageandravage-common.toml
+++ b/overrides/config/savageandravage-common.toml
@@ -2,13 +2,14 @@
 "Creepies spawn after creeper explosions" = true
 #If true, creepies grow significantly larger when they explode.
 "Creepie go big when boom" = false
+"Have Creepers drop Creeper Spores after they die from an explosion" = true
 
 ["Quark Poisonous Potato Compat"]
-	#If true, creepies can be fed a poisonous potato to stunt their growth when Quark is installed.
-	"Compat enabled" = true
-	#If false, the feature will still work but not give creepies poison.
-	"Poison effect" = true
 	#This affects the chance to stunt a creepie's growth when a poisonous potato is fed.
 	#Range: 0.0 ~ 1.0
 	"Poison chance" = 0.1
+	#If false, the feature will still work but not give creepies poison.
+	"Poison effect" = true
+	#If true, creepies can be fed a poisonous potato to stunt their growth when Quark is installed.
+	"Compat enabled" = true
 
